[package]
name = "rustaroo-api"
version = "0.1.0"
repository = 'https://github.com/sanisoclem/preint-test'
documentation = 'https://github.com/sanisoclem/preint-test'
authors = ['Jerahmeel Cosinas <me@jerahmeelcosinas.net>']
description = "pre-interview technical test"
license = 'Apache-2.0'
publish = false

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


[dependencies.rocket_contrib]
version = "0.4.0"
features = [ "json" ]
